# translateIndic

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: test_translator.yml
tests/: eng_sentences.trans.ref.txt  eng_sentences.txt  eng_sentences_long_100.txt  eng_sentences_short_200.txt  test_basic.py
translateindic/: __init__.py  translator.py
