[project]
name = "translateindic"
version = "0.1.0"
description = "Translate Indian languages to English and vice-versa, based on AI4Bharat's indicTrans2"
authors = [{ name = "mukundesh", email = "mukundesh@outlook.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "transformers>=4.37.2,<5",
    "indictranstokenizer",
    "more-itertools>=10.2.0,<11",
    "pysbd>=0.3.4,<0.4",
    "pyyaml>=6.0.1,<7",
]

[dependency-groups]
dev = ["ruff>=0.2.0,<0.3"]
test = [
    "python~=3.10",
    "transformers>=4.37.2,<5",
    "indictranstokenizer",
    "more-itertools>=10.2.0,<11",
    "pysbd>=0.3.4,<0.4",
    "pytest>=8.0.0,<9",
    "ruff>=0.2.1,<0.3",
    "pyyaml>=6.0.1,<7",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.uv.sources]
indictranstokenizer = { git = "https://github.com/orgpedia/IndicTransTokenizer.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
